--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/konstantinovmax/express-mesto.git"
+    "url": "git+https://github.com/konstantinovmax/react-mesto-api-full.git"
   },
   "keywords": [],
   "author": "Maksim Konstantinov",
@@ -19,7 +19,7 @@
   "bugs": {
     "url": "https://github.com/konstantinovmax/express-mesto/issues"
   },
-  "homepage": "https://github.com/konstantinovmax/express-mesto#readme",
+  "homepage": "",
   "devDependencies": {
     "eslint": "^7.14.0",
     "eslint-config-airbnb-base": "^14.2.1",
